--- a/corevia-backend/requirements.txt
+++ b/corevia-backend/requirements.txt
@@ -20,7 +20,9 @@ click-plugins==1.1.1.2
 click-repl==0.3.0
 cryptography==46.0.4
 distro==1.9.0
+dnspython==2.8.0
 ecdsa==0.19.1
+email-validator==2.3.0
 fastapi==0.128.0
 firebase_admin==7.1.0
 GeoAlchemy2==0.18.1
@@ -32,6 +34,7 @@ google-cloud-storage==3.8.0
 google-crc32c==1.8.0
 google-resumable-media==2.8.0
 googleapis-common-protos==1.72.0
+greenlet==3.3.1
 grpcio==1.76.0
 grpcio-status==1.76.0
 h11==0.16.0
@@ -60,6 +63,7 @@ pyasn1==0.6.2
 pyasn1_modules==0.4.2
 pycparser==3.0
 pydantic==2.12.5
+pydantic-settings==2.12.0
 pydantic_core==2.41.5
 PyJWT==2.11.0
 python-dateutil==2.9.0.post0
