--- a/CoreVia-Android/gradle/libs.versions.toml
+++ b/CoreVia-Android/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ retrofit = "2.11.0"
 okhttp = "4.12.0"
 securityCrypto = "1.1.0-alpha06"
 coroutines = "1.8.1"
-mapsCompose = "4.4.1"
+osmdroid = "6.1.18"
 playServicesLocation = "21.3.0"
 coil = "2.7.0"
 
@@ -42,7 +42,7 @@ okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhtt
 okhttp-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 androidx-security-crypto = { group = "androidx.security", name = "security-crypto", version.ref = "securityCrypto" }
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
-maps-compose = { group = "com.google.maps.android", name = "maps-compose", version.ref = "mapsCompose" }
+osmdroid = { group = "org.osmdroid", name = "osmdroid-android", version.ref = "osmdroid" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 
