--- a/corevia-backend/requirements.txt
+++ b/corevia-backend/requirements.txt
@@ -52,7 +52,13 @@ Mako==1.3.10
 MarkupSafe==3.0.3
 msgpack==1.1.2
 numpy==2.4.2
-openai==2.16.0
+# ML/AI — Local (xarici API yoxdur)
+torch>=2.0.0
+torchvision>=0.15.0
+ultralytics>=8.0.0
+timm>=0.9.0
+scikit-learn>=1.3.0
+xgboost>=2.0.0
 packaging==26.0
 pandas==3.0.0
 passlib==1.7.4
